# backend-go/internal/core/domain/entity/auth_response.go
@@ -1,0 +1,8 @@
+package entity
+
+type AuthResponse struct {
+	FirstName   string `json:"first_name"`
+	LastName    string `json:"last_name"`
+	Username    string `json:"username"`
+	AccessToken string `json:"access_token"`
+}
