# backend-go/internal/core/domain/entity/user.go
@@ -1,0 +1,13 @@
+package entity
+
+import (
+	"go.mongodb.org/mongo-driver/bson/primitive"
+)
+
+type User struct {
+	Id        primitive.ObjectID `bson:"_id,omitempty"`
+	FirstName string             `bson:"first_name"`
+	LastName  string             `bson:"last_name"`
+	Username  string             `bson:"username" validate:"required,email"`
+	Password  string             `bson:"password" validate:"required"`
+}
