# backend-go/internal/core/port/user_controller.go
@@ -1,0 +1,10 @@
+package port
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+type UserController interface {
+	Register(ctxGin *gin.Context)
+	Login(ctxGin *gin.Context)
+}
